# nbo

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  compile_commands.json  notes.org
src/: CMakeLists.txt  main.cpp  planet.cpp  planet.h  real_values.h  render_thread.cpp  render_thread.h  ring_buffer.h  simulate_thread.cpp  simulate_thread.h  simulation.cpp  simulation.h  simulation_stats.cpp  simulation_stats.h  space.cpp  space.h  space_printer.cpp  space_printer.h  space_stats.cpp  space_stats.h  threader.cpp  threader.h  util.cpp  util.h  vec2.h
